--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@vitejs/plugin-react": "^4.2.1",
+		"@webgpu/types": "^0.1.40",
 		"prettier": "^3.1.1",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"typescript": "^5.2.2",
