--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"@vitejs/plugin-react": "^4.2.1",
 		"@webgpu/types": "^0.1.40",
 		"prettier": "^3.2.5",
+		"prettier-plugin-css-order": "^2.1.2",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.11"
 	},
 	"prettier": {
 		"plugins": [
+			"prettier-plugin-css-order",
 			"prettier-plugin-organize-imports"
 		]
 	}
