--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@ludwigbrida/photon": "*",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
