--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.0.18",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
